--- a/demo.html
+++ b/demo.html
@@ -3,8 +3,7 @@
   <head>
     <title>Angular Lightbox</title>
     <meta charset="utf-8" />
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://code.angularjs.org/1.3.3/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.7.8/angular.min.js"></script>
     <script src="angular-lightbox/angular-lightbox.js"></script>
     <script src="demo.js"></script>
     <link type="text/css" rel="stylesheet" href="angular-lightbox/angular-lightbox.css" />
