Added support for single image URL

--- a/demo.html
+++ b/demo.html
@@ -7,13 +7,32 @@
     <script src="angular-lightbox/angular-lightbox.js"></script>
     <script src="demo.js"></script>
     <link type="text/css" rel="stylesheet" href="angular-lightbox/angular-lightbox.css" />
+    <style type="text/css">
+body {
+  margin: 2em;
+  font-family: sans-serif;
+  color: #333;
+}
+    </style>
   </head>
   <body ng-controller="DemoController">
-    <h1>{{title}}</h1>
+    <h1>Angular lightbox</h1>
+
+    <h2>Image array, unique link</h2>
+    <span lightbox="images">
+      <a href class="lightbox-trigger">link</a>
+    </span>
+
+    <h2>Image array, link for each element</h2>
     <ul lightbox="images">
       <li ng-repeat="image in images">
-        <a href="{{image}}" class="lightbox-trigger">{{image}}</a>
+        <a href="{{ image  }}" class="lightbox-trigger">{{ image }}</a>
       </li>
     </ul>
+
+    <h2>Single and very large image</h2>
+    <span lightbox="largeImage">
+      <a ng-href="largeImage" class="lightbox-trigger">{{ largeImage }}</a>
+    </span>
   </body>
 </html>
