Renamed npm package to angularjs-lightbox

--- a/demo.html
+++ b/demo.html
@@ -4,9 +4,9 @@
     <title>Angular Lightbox</title>
     <meta charset="utf-8" />
     <script src="https://code.angularjs.org/1.7.8/angular.min.js"></script>
-    <script src="angular-lightbox/angular-lightbox.js"></script>
+    <script src="src/angular-lightbox.js"></script>
     <script src="demo.js"></script>
-    <link type="text/css" rel="stylesheet" href="angular-lightbox/angular-lightbox.css" />
+    <link type="text/css" rel="stylesheet" href="src/angular-lightbox.css" />
     <style type="text/css">
 body {
   margin: 2em;
